// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object as a list of key value pairs 1`] = `
<div>
  <dl
    class="descriptionList"
  >
    <div
      class="termGroup"
    >
      <dt
        class="base regular base blue"
      >
        Issued
      </dt>
      <dd
        class="base regular base greyBlueDark"
      >
        2018-12-08
      </dd>
    </div>
    <div
      class="termGroup"
    >
      <dt
        class="base regular base blue"
      >
        Due
      </dt>
      <dd
        class="base regular base greyBlueDark"
      >
        2019-01-06
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders an object as a list of key value pairs with an element 1`] = `
<div>
  <dl
    class="descriptionList"
  >
    <div
      class="termGroup"
    >
      <dt
        class="base regular base blue"
      >
        Foo
      </dt>
      <dd
        class="base regular base greyBlueDark"
      >
        Foo
      </dd>
    </div>
    <div
      class="termGroup"
    >
      <dt
        class="base regular base blue"
      >
        Bar
      </dt>
      <dd
        class="base regular base greyBlueDark"
      >
        Bar
      </dd>
    </div>
  </dl>
</div>
`;
